[gd_scene load_steps=2 format=3 uid="uid://oig5fw6aq153"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_slw0n"]

[node name="Main" type="Node2D"]
script = ExtResource("1_slw0n")

[node name="Editor" type="CodeEdit" parent="."]
unique_name_in_owner = true
offset_left = 9.0
offset_top = 168.0
offset_right = 1924.0
offset_bottom = 1094.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
placeholder_text = "~ Slug Editor ~"
scroll_smooth = true
caret_blink = true
highlight_all_occurrences = true
draw_control_chars = true
draw_tabs = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="PathSetter" type="TextEdit" parent="."]
unique_name_in_owner = true
offset_left = 786.0
offset_right = 1921.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 32

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="SaveButton" type="Button" parent="."]
offset_right = 163.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 32
text = "Save
"

[node name="OpenButton" type="Button" parent="."]
offset_left = 164.0
offset_right = 327.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 32
text = "Open"

[connection signal="gui_input" from="Editor" to="." method="_on_editor_gui_input"]
[connection signal="text_changed" from="PathSetter" to="." method="_on_path_setter_text_changed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="OpenButton" to="." method="_on_open_button_pressed"]
